--- a/app/main/views/main/todos.html
+++ b/app/main/views/main/todos.html
@@ -1,15 +1,20 @@
 <:Title>
   Todos
 <:Body>
-<h1>Todos</h1>
-  {{ page._todos.each do |todo| }}
-  <h4><input type='checkbox' checked='{{ todo._completed}}'/>
-    {{ todo._name }}
-    <button e-click='todo.destroy'>X</button>
-  </h4>
-  {{ end }}
-  <form e-submit='add_todo' role='form'>
-    <div class='form-group'>
+  <h1>Todos</h1>
+  <form e-submit="add_todo" role="form">
+    <div class="form-group">
       <label>Task To Do</label>
-        <input class='form-control' type='text' value='{{page._new_todo}}'>
+        <input class="form-control" type="text" value="{{ page._new_todo }}" />
+    </div>
   </form>
+
+  <table class="todo-table">
+    {{ page._todos.each do |todo| }}
+      <tr>
+        <td><input type="checkbox" checked="{{ todo._completed }}" /></td>
+        <td class="{{ if todo._completed }}complete{{ end }}">{{ todo._name }}</td>
+        <td><button e-click="todo.destroy">X</button></td>
+      </tr>
+    {{ end }}
+  </table>
